fix(video): fixed icon size, controls color contrast, and container size

--- a/src/less/video/base/video.less
+++ b/src/less/video/base/video.less
@@ -2,6 +2,11 @@
     position: relative;
 }
 
+.video-player video {
+    height: 100%;
+    width: 100%;
+}
+
 .video-player__overlay {
     align-items: center;
     background-color: rgba(0, 0, 0, 0.6);
@@ -28,8 +33,8 @@
 
 .video-player .shaka-overflow-menu svg {
     height: 24px;
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
     width: 24px;
 }
 
@@ -45,4 +50,9 @@
 .video-player .shaka-play-button svg {
     height: 48px;
     width: 48px;
+}
+
+.video-player .shaka-controls-button-panel {
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 8px;
 }
